Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -328,6 +328,9 @@ ENDMODULE.
 **6) `TOP` 파일에 변수 선언**
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
+*&---------------------------------------------------------------------*
+*& Include MZMDPB03_001TOP                          - Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
 PROGRAM SAPMZMDPB03_001.
 
 TABLES: SDYN_CONN. " 스크린 안에 생성한
@@ -351,6 +354,14 @@ PROCESS AFTER INPUT.
 
 **5) PAI 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZMDPB03_001I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
 MODULE user_command_0100 INPUT.
   CASE INPUT01.
     WHEN 'X'.
@@ -369,11 +380,23 @@ ENDMODULE.
 
 **6) PBO 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          MZMDPB03_001O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'. " Application 버튼들 등 설정
  SET TITLEBAR 'T100'.
 ENDMODULE.
-
+*&---------------------------------------------------------------------*
+*& Module CLEAR_FIELDS OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
 MODULE clear_fields OUTPUT.
   CLEAR INPUT01.
   CLEAR OK_CODE.
@@ -401,7 +424,7 @@ ENDMODULE.
 ## < 실습 코드 >
 ### 실습 1
 
-**1) 인풋 3개 필수값으로 지정**
+**1) 스크린 `Layout` 디자인**
 
 <img width="620" height="386" alt="image" src="https://github.com/user-attachments/assets/a3a604f3-eba2-4c67-bfb1-cd29d0f82c66" />
 </br>
@@ -523,15 +546,17 @@ ENDMODULE.
 </br>
 </br>
 
-**1) 인풋 3개 필수값으로 지정**
+**1) 스크린 `Layout` 디자인**
 
-<img width="620" height="386" alt="image" src="https://github.com/user-attachments/assets/a3a604f3-eba2-4c67-bfb1-cd29d0f82c66" />
+<img width="525" height="376" alt="image" src="https://github.com/user-attachments/assets/97c0df65-cb89-4410-8d35-55cd1f5c71ad" />
+
 </br>
 </br>
 
 **2) 스크린 파일 `element list`에서 `OK_CODE` 추가**
 
-<img width="623" height="349" alt="image" src="https://github.com/user-attachments/assets/95ea6ac0-944a-4048-9c8c-fc5e80964fa2" />
+<img width="606" height="249" alt="image" src="https://github.com/user-attachments/assets/1613c966-2636-4245-9b84-02dc8ce29cf6" />
+
 </br>
 </br>
 
@@ -539,34 +564,31 @@ ENDMODULE.
 - tables 선언, OK_CODE 데이터로 선언 필수 
 ```abap
 *&---------------------------------------------------------------------*
-*& Include MZBC410_SOLUTION_TOP                     - Module Pool      SAPMZBC410_SOLUTION_03
+*& Include MZPRACTICE01B03_TOP                      - Module Pool      SAPMZPRACTICE01B03
 *&---------------------------------------------------------------------*
-PROGRAM SAPMZBC410_SOLUTION_03.
+PROGRAM SAPMZPRACTICE01B03.
 
-TABLES: SDYN_CONN.
+TABLES: smeal.
 
-DATA: exit_button TYPE C,
-      OK_CODE TYPE SY-UCOMM,
-      gs_data TYPE SDYN_CONN,
-      gv_subrc TYPE sy-subrc.
+DATA: OK_CODE TYPE sy-ucomm,
+      gt_data TYPE TABLE OF smeal.
 ```
 </br>
 
 **4) 스크린 파일 코드에 PBO, PAI 모듈 추가**
 ```abap
 PROCESS BEFORE OUTPUT.
- MODULE STATUS_0100.
+* MODULE STATUS_0100.
 *
 PROCESS AFTER INPUT.
-  MODULE CHECK_SFLIGHT.
-  MODULE USER_COMMAND_0100.
+ MODULE USER_COMMAND_0100.
 ```
 </br>
 
 **5) PAI 코드 추가**
 ```abap
 *&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_I01
+*& Include          MZPRACTICE01B03_I01
 *&---------------------------------------------------------------------*
 *&---------------------------------------------------------------------*
 *&      Module  USER_COMMAND_0100  INPUT
@@ -575,64 +597,29 @@ PROCESS AFTER INPUT.
 *----------------------------------------------------------------------*
 MODULE user_command_0100 INPUT.
 
-  IF exit_button = 'X'.
-    LEAVE TO SCREEN 0.
-  ENDIF.
+  SELECT * FROM smeal
+    INTO CORRESPONDING FIELDS OF TABLE gt_data
+    WHERE carrid = SMEAL-CARRID.
 
-ENDMODULE.
+  cl_demo_output=>display( gt_data ).
 
-*&---------------------------------------------------------------------*
-*&      Module  CHECK_SFLIGHT  INPUT
-*&---------------------------------------------------------------------*
-*       text
-*----------------------------------------------------------------------*
-MODULE check_sflight INPUT.
-
-  SELECT SINGLE * FROM sflight
-    INTO CORRESPONDING FIELDS OF gs_data
-    WHERE carrid = SDYN_CONN-carrid
-      AND connid = SDYN_CONN-connid
-      AND fldate = SDYN_CONN-fldate.
-
-  IF sy-subrc <> 0.
-    gv_subrc = 4.
-    message text-007 TYPE 'I'.
-  ENDIF.
+  LEAVE TO SCREEN 0.
 
 ENDMODULE.
 ```
 </br>
 
-**6) PBO 코드 추가**
-```abap
-*&---------------------------------------------------------------------*
-*& Include          MZBC410_SOLUTION_O01
-*&------------------------------------+---------------------------------*
-*&---------------------------------------------------------------------*
-*& Module STATUS_0100 OUTPUT
-*&---------------------------------------------------------------------*
-*&
-*&---------------------------------------------------------------------*
-MODULE status_0100 OUTPUT.
-  IF gv_subrc <> 0.
-    CLEAR SDYN_CONN.
-    gv_subrc = 0.
-  ELSE.
-    MOVE-CORRESPONDING gs_data TO SDYN_CONN.
-  ENDIF.
-ENDMODULE.
-```
-</br>
+**6) TCODE 생성**
 
-**7) TCODE 생성**
+<img width="604" height="426" alt="image" src="https://github.com/user-attachments/assets/ffe9d3ad-2924-42dc-88d0-b1c2984205ca" />
 
-<img width="542" height="382" alt="image" src="https://github.com/user-attachments/assets/c5ade457-68f6-4730-b72c-b83ea00b645b" />
 </br>
 </br>
 
-**8) 결과 확인**
+**7) 결과 확인**
 
-<img width="492" height="339" alt="image" src="https://github.com/user-attachments/assets/5e884687-7bb1-47af-a3b9-15f8b588d209" />
+<img width="307" height="195" alt="image" src="https://github.com/user-attachments/assets/04c34b4c-cc6d-4cbc-bb71-fea1538821d4" />
+
 </br>
 </br>
 </br>
