Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,1 +1,20 @@
+## < ABAP 개념 >
+</br>
+
+### < Module pool 구조 >
+
+**1) TOP(Include)**
+- 전역 변수(Global Variables) 선언
+- 화면(Screen)에서 사용할 변수들도 여기에서 선언함
+
+**2) F01 (Include)**
+- 로컬 변수(Local Variables)
+- FORM 루틴(Function Routines)들 선언
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
