Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -2,7 +2,7 @@
 </br>
 
 ### < Module pool 구조 >
-
+- 모듈풀 프로그램 하나 → 트랜잭션코드 하나와 연결
 **1) TOP(Include)**
 - 전역 변수(Global Variables) 선언
 - 화면(Screen)에서 사용할 변수들도 여기에서 선언함
