Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -11,6 +11,24 @@
 **2) F01 (Include)**
 - 로컬 변수(Local Variables)
 - FORM 루틴(Function Routines)들 선언
+
+</br>
+</br>
+
+---
+
+</br>
+
+
+## < SCREEN 필드 속성 제어 >
+- PAI에서 버튼 클릭 이벤트 발생 → PBO에서 SCREEN 테이블을 수정하여 스크린의 속성 변경 가능
+  
+  - 입력 가능(Input) → 입력 불가(Output only)
+  - Visible → Invisible
+  - Active → Inactive 등
+</br>
+
+
 </br>
 </br>
 
