--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -29,7 +29,22 @@
 </br>
 
 ### < SCREEN 테이블 (헤더라인 있는 INTERNAL TABLE) >
+- ABAP 모듈풀에서 스크린 필드 속성을 변경할 때 사용하는 시스템 내부 테이블
+</br>
 
+**1) SCREEN은 `헤더라인` 을 포함한 구조 => `into절` 생략 가능**
+
+- 일반 인터널 테이블
+```abap
+LOOP AT screen INTO screen.
+```
+- screen (헤더라인이므로 into절 생략 가능)
+```abap
+LOOP AT screen.
+  " screen-name
+  " screen-input
+ENDLOOP.
+```
 </br>
 </br>
 
