Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -33,7 +33,7 @@
 - ABAP 모듈풀에서 스크린 필드 속성을 변경할 때 사용하는 시스템 내부 테이블
 </br>
 
-**1) SCREEN은 `헤더라인` 을 포함한 구조 => `into절` 생략 가능**
+**1) SCREEN은 헤더라인을 포함한 구조 => `into`절 생략 가능**
 
 - 일반 인터널 테이블
 ```abap
@@ -45,6 +45,32 @@ LOOP AT screen.
   " screen-name
   " screen-input
 ENDLOOP.
+```
+</br>
+
+**2) SCREEN 속성 변경은 `MODIFY SCREEN` 필수**
+- SCREEN 내부 테이블에서 특정 필드를 수정하면 반드시 다음 구문을 넣어야 실제 스크린에 반영됨
+- 각 필드의 속성에 접근해서 변경할 수 있음
+
+<img width="548" height="365" alt="image" src="https://github.com/user-attachments/assets/e438b436-a6ad-4dae-96d9-a4aaf6bab111" />
+</br>
+</br>
+
+```abap
+MODULE modify_screen OUTPUT.
+
+  LOOP AT SCREEN. 
+    IF screen-group1 = 'SEL'.
+      screen-input = 1.
+    ENDIF.
+
+    IF screen-name = 'FIELD1'.
+      screen-active = 0.
+    ENDIF.
+    MODIFY SCREEN.
+  ENDLOOP.
+
+ENDMODULE.
 ```
 </br>
 </br>
