Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -51,6 +51,7 @@ ENDLOOP.
 **2) SCREEN 속성 변경은 `MODIFY SCREEN` 필수**
 - SCREEN 내부 테이블에서 특정 필드를 수정하면 반드시 다음 구문을 넣어야 실제 스크린에 반영됨
 - 각 필드의 속성에 접근해서 변경할 수 있음
+- SCREEN 속성 값은 `1 = TRUE` , `0 = FALSE`
 
 <img width="548" height="365" alt="image" src="https://github.com/user-attachments/assets/e438b436-a6ad-4dae-96d9-a4aaf6bab111" />
 </br>
@@ -65,8 +66,8 @@ MODULE modify_screen OUTPUT.
     ENDIF.
 
     IF screen-name = 'FIELD1'.
-      screen-active = 0.
-    ENDIF.
+      screen-active = 0.          " 여기까지는 헤더 부분만 변경. 
+    ENDIF.                        " 스크린 변경하고 싶으면 아래 MODIFY를 해줘야 함.
     MODIFY SCREEN.
   ENDLOOP.
 
