--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -82,4 +82,19 @@ ENDMODULE.
 
 </br>
 
+## < 버튼 이벤트 처리 >
+</br>
+
+**1) 버튼 생성 후 속성 창에서 FctCode 필드 입력 (펑션코드)**
+
+<img width="516" height="460" alt="image" src="https://github.com/user-attachments/assets/4a389551-9ac5-4bf7-9ab2-ed3cff3674d0" />
+
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
