Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -88,7 +88,18 @@ ENDMODULE.
 **1) 버튼 생성 후 속성 창에서 FctCode 필드 입력 (펑션코드)**
 
 <img width="433" height="386" alt="image" src="https://github.com/user-attachments/assets/3771a73a-832f-4fb0-a529-83a9880fa9cf" />
+</br>
+</br>
 
+**2) 입력필드 6개 묶어서 `GROUP1` 지정**
+
+<img width="468" height="376" alt="image" src="https://github.com/user-attachments/assets/0a41e9b3-9292-4a5f-b2f3-7e185c4486b5" />
+</br>
+</br>
+
+**3) 필드에 `OK_CODE` 추가**
+
+<img width="556" height="336" alt="image" src="https://github.com/user-attachments/assets/1c44dc39-2c62-46b9-a57e-aa36e7081a8b" />
 
 
 </br>
