Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -100,8 +100,120 @@ ENDMODULE.
 **3) 필드에 `OK_CODE` 추가**
 
 <img width="556" height="336" alt="image" src="https://github.com/user-attachments/assets/1c44dc39-2c62-46b9-a57e-aa36e7081a8b" />
+</br>
+</br>
 
+**4) 스크린 창에서 모듈 `PBO` , `PAI` 생성**
 
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+   MODULE MODIFY_SCREEN.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**5) 'PBO' - 타이틀에 변수 채워서 설정**
+
+- '&1 &2 &3' : 타이틀에 변수를 설정할 수 있음
+
+<img width="537" height="132" alt="image" src="https://github.com/user-attachments/assets/99b90233-b96f-406d-bc97-1c6d6f792f2c" />
+</br>
+</br>
+
+**6) 'PBO' - 표준 버튼을 어떤 Function Code(OKCODE)로 동작시킬지 설정**
+
+- 이름 지정 시 그 이름으로 `OKCODE` 로 받아서 처리 가능
+<img width="591" height="336" alt="image" src="https://github.com/user-attachments/assets/d8a80673-5514-47e1-a54f-bd9d9ed112eb" />
+
+</br>
+</br>
+
+**7) 'TOP' 모듈 구현**
+
+```abap
+*&---------------------------------------------------------------------*
+*& Include MZB03002_TOP                             - Module Pool      SAPMZB03002
+*&---------------------------------------------------------------------*
+PROGRAM sapmzb03002.
+
+TABLES: sdyn_conn.
+
+DATA: ok_code TYPE sy-ucomm,
+      gv_mod  TYPE i. " 변경모드 값을 받을 변수
+```
+</br>
+
+**8) 'PAI' 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03002_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'CHBTN'.
+      IF gv_mod = 1.
+        gv_mod = 0.
+      ELSE.
+        gv_mod = 1.
+      ENDIF.
+    WHEN 'BACK' OR 'EXIT' OR 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**9) 'PBO' 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03002_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-datum sy-uzeit sy-uname.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module MODIFY_SCREEN OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE modify_screen OUTPUT.
+  " 헤더가 있는 itab인 SCREEN을 한 건씩 돌면서 동적 처리
+  LOOP AT SCREEN.   " INTO SCREEN이 생략
+    " SCREEN의 Element 중, group1 값이 'MOD'인 경우
+    IF SCREEN-GROUP1 = 'MOD'.
+      " Input 속성에 gv_mod 변수 값을 적용함
+      SCREEN-INPUT = gv_mod. " 0 또는 1
+    ENDIF.
+
+    " Header-Line에 있는 itab 이라서, 작업한 Header를
+    " Itab(Body)에 적용시켜야 함
+    MODIFY SCREEN. "변경사항 반영
+  ENDLOOP.
+ENDMODULE.
+```
+</br>
+
+**9) 결과 확인**
+
+<img width="465" height="316" alt="image" src="https://github.com/user-attachments/assets/32e64b3d-0c48-4144-8e58-5e6b3a007644" />
+
+</br>
+</br>
 </br>
 </br>
 
