Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -115,7 +115,7 @@ PROCESS AFTER INPUT.
 ```
 </br>
 
-**5) 'PBO' - 타이틀에 변수 채워서 설정**
+**5) `PBO` - 타이틀에 변수 채워서 설정**
 
 - '&1 &2 &3' : 타이틀에 변수를 설정할 수 있음
 
@@ -123,7 +123,7 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-**6) 'PBO' - 표준 버튼을 어떤 Function Code(OKCODE)로 동작시킬지 설정**
+**6) `PBO` - 표준 버튼을 어떤 Function Code(OKCODE)로 동작시킬지 설정**
 
 - 이름 지정 시 그 이름으로 `OKCODE` 로 받아서 처리 가능
 <img width="591" height="336" alt="image" src="https://github.com/user-attachments/assets/d8a80673-5514-47e1-a54f-bd9d9ed112eb" />
@@ -131,7 +131,7 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-**7) 'TOP' 모듈 구현**
+**7) `TOP` 모듈 구현**
 
 ```abap
 *&---------------------------------------------------------------------*
@@ -146,7 +146,7 @@ DATA: ok_code TYPE sy-ucomm,
 ```
 </br>
 
-**8) 'PAI' 모듈 구현**
+**8) `PAI` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03002_I01
@@ -172,7 +172,7 @@ ENDMODULE.
 ```
 </br>
 
-**9) 'PBO' 모듈 구현**
+**9) `PBO` 모듈 구현**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03002_O01
