Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -75,6 +75,32 @@ MODULE modify_screen OUTPUT.
 
 ENDMODULE.
 ```
+
+</br>
+</br>
+
+**3) 그룹(Group1, Group2 등) 속성 활용 → 일괄 제어 가능**
+- 스크린 필드별로 그룹 코드 지정 가능
+- 특정 그룹 필드 전체를 한 번에 제어할 수 있어 편리함
+```abap
+LOOP AT SCREEN.
+  IF screen-group1 = 'GRP1'.
+    screen-input = '0'. " GRP1 그룹 전체 입력 불가 처리
+  ENDIF.
+  MODIFY SCREEN.
+ENDLOOP.
+```
+
+</br>
+</br>
+
+**4) 구현 위치는 무조건 PBO**
+- 스크린 속성 변경은 PBO에서 수행해야 반영됨
+- 필드 속성 변경 후 반드시 `MODIFY SCREEN` 사용
+```abap
+MODIFY SCREEN.
+```
+
 </br>
 </br>
 
