Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -152,6 +152,10 @@ PROCESS AFTER INPUT.
 **6) `PBO` - 표준 버튼을 어떤 Function Code(OKCODE)로 동작시킬지 설정**
 
 - 이름 지정 시 그 이름으로 `OKCODE` 로 받아서 처리 가능
+```abap
+SET TITLEBAR '타이틀바_이름' WITH <값1> <값2> <값3> ...
+```
+
 <img width="591" height="336" alt="image" src="https://github.com/user-attachments/assets/d8a80673-5514-47e1-a54f-bd9d9ed112eb" />
 
 </br>
