Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -252,3 +252,11 @@ ENDMODULE.
 </br>
 
 ## < 실습 코드 >
+
+### 실습 1
+
+<img width="413" height="145" alt="image" src="https://github.com/user-attachments/assets/9381f16c-f73c-4c18-9077-490ef574ed21" />
+</br>
+</br>
+
+**1) **
