Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -123,7 +123,7 @@ MODIFY SCREEN.
 </br>
 </br>
 
-**3) 필드에 `OK_CODE` 추가**
+**3) 스크린 필드에 `OK_CODE` 추가**
 
 <img width="556" height="336" alt="image" src="https://github.com/user-attachments/assets/1c44dc39-2c62-46b9-a57e-aa36e7081a8b" />
 </br>
@@ -149,7 +149,7 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-**6) `PBO` - 표준 버튼을 어떤 Function Code(OKCODE)로 동작시킬지 설정**
+**6) `PBO` - 표준 버튼을 어떤 `OKCODE` 로 동작시킬지 설정**
 
 - 이름 지정 시 그 이름으로 `OKCODE` 로 받아서 처리 가능
 ```abap
@@ -238,7 +238,14 @@ ENDMODULE.
 ```
 </br>
 
-**9) 결과 확인**
+**9) TCODE 설정**
+
+<img width="571" height="394" alt="image" src="https://github.com/user-attachments/assets/89ecff27-c6a2-4114-8dff-df2a534187ee" />
+
+</br>
+</br>
+
+**10) 결과 확인**
 
 <img width="465" height="316" alt="image" src="https://github.com/user-attachments/assets/32e64b3d-0c48-4144-8e58-5e6b3a007644" />
 
@@ -261,6 +268,113 @@ ENDMODULE.
 </br>
 </br>
 
-**1)**
+**1) 버튼 생성 후 속성 창에서 FctCode 필드 입력 (펑션코드)**
 
 <img width="566" height="319" alt="image" src="https://github.com/user-attachments/assets/313b5f4b-436d-4f83-8e49-9d3fecd0b853" />
+</br>
+</br>
+
+**2) 스크린 필드에 `OK_CODE` 추가**
+
+<img width="574" height="344" alt="image" src="https://github.com/user-attachments/assets/b3590a1c-497c-4ea7-882b-dbd3ee47e63a" />
+</br>
+</br>
+
+**3) 스크린 창에서 모듈 `PBO` , `PAI` 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+*
+PROCESS AFTER INPUT.
+  MODULE CHECK_SFLIGHT.
+  MODULE USER_COMMAND_0100.
+```
+</br>
+
+**4) `TOP` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include MZBC410_SOLUTION_TOP                     - Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZBC410_SOLUTION_03.
+
+TABLES: SDYN_CONN.
+
+DATA: exit_button TYPE C,
+      OK_CODE TYPE SY-UCOMM,
+      gs_data TYPE SDYN_CONN,
+      gv_subrc TYPE sy-subrc,
+      gs_data2 LIKE SDYN_CONN,
+      gv_button TYPE I.
+```
+</br>
+
+**5) `PAI` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  IF exit_button = 'X'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+*&      Module  CHECK_SFLIGHT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE check_sflight INPUT.
+
+  IF OK_CODE = 'FCBTN'.
+    gv_button = 1.
+
+    SELECT SINGLE * FROM sflight
+      INTO CORRESPONDING FIELDS OF gs_data
+      WHERE carrid = SDYN_CONN-carrid
+        AND connid = SDYN_CONN-connid
+        AND fldate = SDYN_CONN-fldate.
+
+    IF sy-subrc <> 0.
+      gv_subrc = 4.
+      message text-007 TYPE 'I'.
+    ENDIF.
+  ENDIF.
+
+ENDMODULE.
+```
+</br>
+
+**6) `PBO` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_O01
+*&------------------------------------+---------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+
+  IF gv_button = 1.
+    IF gv_subrc <> 0.
+      CLEAR SDYN_CONN.
+      gv_subrc = 0.
+    ELSE.
+      MOVE-CORRESPONDING gs_data TO SDYN_CONN.
+    ENDIF.
+  ELSE.
+    gv_button = 0.
+  ENDIF.
+
+ENDMODULE.
+```
