Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -378,3 +378,12 @@ MODULE status_0100 OUTPUT.
 
 ENDMODULE.
 ```
+</br>
+</br>
+
+### 실습 2
+</br>
+
+- 문제
+
+<img width="663" height="666" alt="image" src="https://github.com/user-attachments/assets/59f1e4d6-f2ab-4182-b626-f0e7326db716" />
