Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,4 +1,4 @@
-## < ABAP 개념 >
+<img width="603" height="452" alt="image" src="https://github.com/user-attachments/assets/5f49c222-e5e5-493e-b0ae-28f7673543a2" />## < ABAP 개념 >
 </br>
 
 ### < Module pool 구조 >
@@ -380,8 +380,9 @@ ENDMODULE.
 ```
 </br>
 </br>
+</br>
 
-### 실습 2
+### 실습 2 (과제)
 </br>
 
 - 문제
@@ -395,3 +396,15 @@ ENDMODULE.
 </br>
 
 <img width="660" height="370" alt="image" src="https://github.com/user-attachments/assets/42457db3-b08c-4ab1-a211-d45201d1ff1b" />
+</br>
+</br>
+</br>
+
+**1) 버튼 생성 후 속성 창에서 FctCode 필드 입력 (펑션코드)**
+- SCARR는 FCBTN01, SFLIGHT는 FCBTN02, 검색은 FCBTN03
+<img width="603" height="452" alt="image" src="https://github.com/user-attachments/assets/53b2a934-37fb-41ef-a478-72526c2abf72" />
+
+</br>
+</br>
+
+**6) `PBO` 모듈 구현**
