Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,4 +1,4 @@
-<img width="603" height="452" alt="image" src="https://github.com/user-attachments/assets/5f49c222-e5e5-493e-b0ae-28f7673543a2" />## < ABAP 개념 >
+## < ABAP 개념 >
 </br>
 
 ### < Module pool 구조 >
