Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -401,10 +401,13 @@ ENDMODULE.
 </br>
 
 **1) 버튼 생성 후 속성 창에서 FctCode 필드 입력 (펑션코드)**
-- SCARR는 FCBTN01, SFLIGHT는 FCBTN02, 검색은 FCBTN03
+
+- `SCARR` 는 `FCBTN01` , `SFLIGHT` 는 `FCBTN02` , `검색` 은 `FCBTN03`
 <img width="603" height="452" alt="image" src="https://github.com/user-attachments/assets/53b2a934-37fb-41ef-a478-72526c2abf72" />
 
 </br>
 </br>
 
-**6) `PBO` 모듈 구현**
+**2) 스크린 필드에 `OK_CODE` 추가**
+
+<img width="626" height="464" alt="image" src="https://github.com/user-attachments/assets/13d15983-080c-45b3-9d9e-6b63731e2d93" />
