Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -411,3 +411,141 @@ ENDMODULE.
 **2) 스크린 필드에 `OK_CODE` 추가**
 
 <img width="626" height="464" alt="image" src="https://github.com/user-attachments/assets/13d15983-080c-45b3-9d9e-6b63731e2d93" />
+</br>
+</br>
+
+
+**3) 스크린 창에서 모듈 `PBO` , `PAI` 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**4) `TOP` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include SAPMZPRACTICE02B03_TOP                   - Module Pool      SAPMZPRACTICE02B03
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZPRACTICE02B03.
+
+TABLES: ZSCARRFLIGHT_B03.
+
+DATA: OK_CODE TYPE sy-ucomm,
+      gv_button1 TYPE I,
+      gv_button2 TYPE I,    " VISIBLE 제어를 위한 플래그 (ex: scarr만 눌렀을 때)
+      gv_result_btn1 TYPE I,
+      gv_result_btn2 TYPE I,
+      gv_result_btn3 TYPE I,   " 결과를 표시하기 위한 플래그 (ex: scarr -> 검색까지)
+      gs_data TYPE ZSCARRFLIGHT_B03.
+```
+</br>
+
+**4) `PAI` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          SAPMZPRACTICE02B03_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  CASE OK_CODE.
+    WHEN 'FCBTN01'.   " SCARR 눌렀을 때
+      CLEAR: ZSCARRFLIGHT_B03-CARRNAME,
+             ZSCARRFLIGHT_B03-CURRCODE,
+             ZSCARRFLIGHT_B03-PRICE,
+             ZSCARRFLIGHT_B03-CURRENCY,
+             ZSCARRFLIGHT_B03-PLANETYPE,
+             ZSCARRFLIGHT_B03-SEATSMAX,
+             ZSCARRFLIGHT_B03-SEATSOCC.
+      gv_button1 = 1.
+    WHEN 'FCBTN02'.   " SFLIGHT 눌렀을 때
+      CLEAR: ZSCARRFLIGHT_B03-CARRNAME,
+             ZSCARRFLIGHT_B03-CURRCODE,
+             ZSCARRFLIGHT_B03-PRICE,
+             ZSCARRFLIGHT_B03-CURRENCY,
+             ZSCARRFLIGHT_B03-PLANETYPE,
+             ZSCARRFLIGHT_B03-SEATSMAX,
+             ZSCARRFLIGHT_B03-SEATSOCC.
+      gv_button2 = 1.
+    WHEN 'FCBTN03'.   " 검색 눌렀을 때
+      CLEAR: gs_data.
+      IF gv_button1 = 1.
+        SELECT SINGLE CARRNAME CURRCODE FROM scarr
+          INTO CORRESPONDING FIELDS OF gs_data
+           WHERE carrid = ZSCARRFLIGHT_B03-CARRID.
+        gv_result_btn1 = 1.
+      ELSEIF gv_button2 = 1.
+        SELECT SINGLE PRICE CURRENCY PLANETYPE SEATSMAX SEATSOCC FROM sflight
+          INTO CORRESPONDING FIELDS OF gs_data
+          WHERE carrid = ZSCARRFLIGHT_B03-CARRID
+            AND connid = ZSCARRFLIGHT_B03-CONNID
+            AND fldate = ZSCARRFLIGHT_B03-FLDATE.
+        gv_result_btn2 = 1.
+      ELSE.
+        SELECT SINGLE A~CARRNAME A~CURRCODE B~PRICE B~CURRENCY B~PLANETYPE B~SEATSMAX B~SEATSOCC
+          INTO CORRESPONDING FIELDS OF gs_data
+          FROM scarr AS A INNER JOIN sflight AS B
+            ON A~CARRID = B~CARRID
+          WHERE A~carrid = ZSCARRFLIGHT_B03-CARRID
+            AND B~connid = ZSCARRFLIGHT_B03-CONNID
+            AND B~fldate = ZSCARRFLIGHT_B03-FLDATE.
+        gv_result_btn3 = 1.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDMODULE.
+```
+</br>
+
+**5) `PBO` 모듈 구현**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          SAPMZPRACTICE02B03_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+  IF gv_result_btn1 = 1.    " SCARR -> 검색 눌렀을 때
+    LOOP AT SCREEN.
+      IF SCREEN-GROUP2 = 'FLT'.
+        SCREEN-invisible = 1.
+        SCREEN-input = 0.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+
+    MOVE-CORRESPONDING gs_data TO ZSCARRFLIGHT_B03.
+    gv_button1 = 0.
+    gv_result_btn1 = 0.
+
+  ELSEIF gv_result_btn2 = 1.    " SFLIGHT -> 검색 눌렀을 때
+    LOOP AT SCREEN.
+      IF SCREEN-GROUP1 = 'CAR'.
+        SCREEN-invisible = 1.
+        SCREEN-input = 0.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+
+    MOVE-CORRESPONDING gs_data TO ZSCARRFLIGHT_B03.
+    gv_button2 = 0.
+    gv_result_btn2 = 0.
+
+  ELSEIF gv_result_btn3 = 1.    " 검색 눌렀을 때
+    MOVE-CORRESPONDING gs_data TO ZSCARRFLIGHT_B03.
+    gv_result_btn3 = 0.
+  ENDIF.
+ENDMODULE.
+```
