--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -15,11 +15,6 @@
 </br>
 </br>
 
----
-
-</br>
-
-
 ## < SCREEN 필드 속성 제어 >
 - PAI에서 버튼 클릭 이벤트 발생 → PBO에서 SCREEN 테이블을 수정하여 스크린의 속성 변경 가능
   
@@ -100,6 +95,10 @@ ENDLOOP.
 ```abap
 MODIFY SCREEN.
 ```
+</br>
+</br>
+
+**4) 구현 위치는 무조건 PBO**
 
 </br>
 </br>
