--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -21,11 +21,9 @@
   - 입력 가능(Input) → 입력 불가(Output only)
   - Visible → Invisible
   - Active → Inactive 등
-</br>
-</br>
-
-### < SCREEN 테이블 (헤더라인 있는 INTERNAL TABLE) >
-- ABAP 모듈풀에서 스크린 필드 속성을 변경할 때 사용하는 시스템 내부 테이블
+    
+- SCREEN 테이블은 헤더라인 있는 INTERNAL TABLE
+  - ABAP 모듈풀에서 스크린 필드 속성을 변경할 때 사용하는 시스템 내부 테이블
 </br>
 </br>
 
