Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,4 +1,4 @@
-## < ABAP 개념 >
+## < ABAP 개념 및 문법 >
 </br>
 
 **< Module pool 구조 >**
@@ -98,6 +98,26 @@ MODIFY SCREEN.
 </br>
 
 ## < SCREEN 관련 함수 >
+
+### SCREEN-INVISIBLE
+- 화면에서 아예 안 보이게 함
+- 필드/라벨/입력칸/화면 공간 사라짐 (빈칸처럼 보임)
+```abap
+SCREEN-invisible = 1.
+```
+```abap
+IF screen-group2 = 'FLT'.    " GROUP2가 FLT인 필드들은 화면에서 완전 제거
+  screen-invisible = 1.
+ENDIF.
+```
+</br>
+
+### SCREEN-INPUT
+- 보이긴 하지만 수정 불가(비활성화)
+- 조회 결과는 보여주되 수정은 막고 싶을 때 사용
+```abap
+SCREEN-input = 0.
+```
 
 </br>
 </br>
