Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -100,7 +100,7 @@ MODIFY SCREEN.
 
 ## < SCREEN 관련 함수 >
 
-### SCREEN-INVISIBLE
+**1) SCREEN-INVISIBLE**
 - 화면에서 아예 안 보이게 함
 - 필드/라벨/입력칸/화면 공간 사라짐 (빈칸처럼 보임)
 ```abap
@@ -113,7 +113,7 @@ ENDIF.
 ```
 </br>
 
-### SCREEN-INPUT
+**2) SCREEN-INPUT**
 - 보이긴 하지만 수정 불가(비활성화)
 - 조회 결과는 보여주되 수정은 막고 싶을 때 사용
 ```abap
