Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -278,6 +278,57 @@ ENDMODULE.
 
 </br>
 
+## < Dynpro 스크린 제어 (다음 스크린 설정) >
+**SET SCREEN vs CALL SCREEN**
+- `SET SCREEN` : 다음 화면 예약 → 화면 교체
+- `CALL SCREEN` : 지금 화면 호출 → 화면 쌓기(스택)
+
+</br>
+
+### 1) SET SCREEN
+- 다음에 실행할 화면을 미리 지정(세팅)
+- 이 문장만으로는 화면 전환이 일어나지 않음
+- `LEAVE SCREEN` 과 함께 사용해야 효과 있음
+```abap
+SET SCREEN 300.
+```
+</br>
+</br>
+
+### 2) CALL SCREEN
+- 현 시점에서 즉시 지정한 화면 호출
+- 기존 화면은 유지되어 종료 후 복귀 가능
+- 호출한 쪽에서 LEAVE SCREEN을 쓰지 않음
+```abap
+CALL SCREEN 300.
+```
+</br>
+</br>
+
+### 3) LEAVE SCREEN
+- 현재 화면을 종료
+- CALL SCREEN으로 열린 화면에서는 이전 화면으로 복귀
+- SET SCREEN 후 사용 시 지정된 화면으로 이동
+```abap
+LEAVE SCREEN.
+```
+</br>
+</br>
+
+### 4) LEAVE TO SCREEN
+- `SET SCREEN 300.` + `LEAVE SCREEN.` 의 축약형
+- 현재 화면 종료 후 300번 화면으로 전환
+- 이전 화면으로 돌아올 수 없음
+```abap
+LEAVE TO SCREEN 300.
+```
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 
 ### 실습 1
