Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -279,28 +279,60 @@ ENDMODULE.
 </br>
 
 ## < Dynpro 스크린 제어 (다음 스크린 설정) >
-**SET SCREEN vs CALL SCREEN**
+**< SET SCREEN vs CALL SCREEN >**
 - `SET SCREEN` : 다음 화면 예약 → 화면 교체
 - `CALL SCREEN` : 지금 화면 호출 → 화면 쌓기(스택)
 
 </br>
 
 ### 1) SET SCREEN
-- 다음에 실행할 화면을 미리 지정(세팅)
-- 이 문장만으로는 화면 전환이 일어나지 않음
+- 다음에 실행할 화면을 미리 지정 (화면 전환 X)
+- 이전 화면은 스택에서 제거됨
 - `LEAVE SCREEN` 과 함께 사용해야 효과 있음
 ```abap
 SET SCREEN 300.
+```
+- **예시 1 : SET SCREEN + LEAVE SCREEN**
+- 현재 화면을 종료하고 300번 화면으로 이동
+```abap
+SET SCREEN 300.
+LEAVE SCREEN.
+```
+- **예시 2 : SET SCREEN + LEAVE TO SCREEN 0**
+- 화면 300으로의 예약은 무시되고, 프로그램이 종료되거나 이전 화면으로 복귀
+```abap
+SET SCREEN 300.
+LEAVE TO SCREEN 0.
 ```
 </br>
 </br>
 
 ### 2) CALL SCREEN
-- 현 시점에서 즉시 지정한 화면 호출
-- 기존 화면은 유지되어 종료 후 복귀 가능
+- 현재 화면 일시 중단 후 화면 실행. (화면 전환 O)
+- 현재 화면은 스택에 유지됨 (복귀 가능)
 - 호출한 쪽에서 LEAVE SCREEN을 쓰지 않음
 ```abap
 CALL SCREEN 300.
+```
+- **예시 1 : CALL SCREEN + LEAVE SCREEN**
+- 300번 화면이 계속 떠있어 다음 명령(LEAVE SCREEN)이 실행되지 못하고 갇힘
+```abap
+CALL SCREEN 300.
+LEAVE SCREEN.
+```
+- **예시 2 : CALL SCREEN + LEAVE TO SCREEN 0**
+- 화면 300이 실행된 후, 바로 종료되어 호출 전 이전 화면으로 복귀
+```abap
+CALL SCREEN 300.
+LEAVE TO SCREEN 0.
+```
+- **예시 3 : 종료 명령어 차이**
+- `LEAVE TO SCREEN 0` 은 이전 화면으로 복귀
+- `SET SCREEN 0. LEAVE SCREEN.` 은 프로그램을 최종 종료
+```abap
+" 300번 화면 내부에서 실행 시 동작 비교
+LEAVE TO SCREEN 0.
+SET SCREEN 0. LEAVE SCREEN.
 ```
 </br>
 </br>
@@ -312,6 +344,17 @@ CALL SCREEN 300.
 ```abap
 LEAVE SCREEN.
 ```
+- **예시 1 : CALL SCREEN 안에서**
+- 호출 전의 이전 화면으로 복귀
+```abap
+LEAVE SCREEN.
+```
+- **예시 2 : SET SCREEN과 함께**
+- 현재 화면을 닫고 예약된 300번 화면이 실행
+```abap
+SET SCREEN 300.
+LEAVE SCREEN.
+```
 </br>
 </br>
 
@@ -321,6 +364,10 @@ LEAVE SCREEN.
 - 이전 화면으로 돌아올 수 없음
 ```abap
 LEAVE TO SCREEN 300.
+```
+- 현재 화면을 종료하고 호출한 이전 화면으로 복귀하거나 프로그램을 종료하는 명령어
+```abap
+LEAVE TO SCREEN 0.
 ```
 </br>
 </br>
