--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -299,15 +299,21 @@ SET SCREEN 300.
 LEAVE SCREEN.
 ```
 - **예시 2 : SET SCREEN + LEAVE TO SCREEN 0**
-- 화면 300으로의 예약은 무시되고, 프로그램이 종료되거나 이전 화면으로 복귀
+- 상황 1 : 현재 화면의 Next Screen = 200 (Initial Screen이 아님 + 상위 Dynpro 존재)
 ```abap
 SET SCREEN 300.
-LEAVE TO SCREEN 0.
+LEAVE TO SCREEN 0.  " 200으로 이동
+```
+- 상황 2 : 현재 화면의 Next Screen = 0 (Initial Screen)
+```abap
+SET SCREEN 300.
+LEAVE TO SCREEN 0.  " 프로그램 종료
 ```
 </br>
 </br>
 
 ### 2) CALL SCREEN
+- `CALL SCREEN` 으로 온 화면에서 `LEAVE SCREEN` 은 자신의 `Next Dynpro`로, `LEAVE TO SCREEN 0` 은 호출 흐름의 `Next Screen` 으로 이동
 - 현재 화면 일시 중단 후 화면 실행. (화면 전환 O)
 - 현재 화면은 스택에 유지됨 (복귀 가능)
 - 호출한 쪽에서 LEAVE SCREEN을 쓰지 않음
@@ -315,38 +321,45 @@ LEAVE TO SCREEN 0.
 CALL SCREEN 300.
 ```
 - **예시 1 : CALL SCREEN + LEAVE SCREEN**
-- 300번 화면이 계속 떠있어 다음 명령(LEAVE SCREEN)이 실행되지 못하고 갇힘
+- Screen 300의 Next Dynpro = 400 이면 400으로 이동
+- Screen 300의 Next Dynpro = 0 이면 100으로 이동
 ```abap
+" Screen 100
 CALL SCREEN 300.
+```
+```abap
+" Screen 300
 LEAVE SCREEN.
 ```
 - **예시 2 : CALL SCREEN + LEAVE TO SCREEN 0**
-- 화면 300이 실행된 후, 바로 종료되어 호출 전 이전 화면으로 복귀
+- `SCREEN 0` → 상위 Dynpro 흐름의 Next Screen
+- 200으로 이동
 ```abap
+" Screen 100 (Next Screen = 200)
 CALL SCREEN 300.
-LEAVE TO SCREEN 0.
 ```
-- **예시 3 : 종료 명령어 차이**
-- `LEAVE TO SCREEN 0` 은 이전 화면으로 복귀
-- `SET SCREEN 0. LEAVE SCREEN.` 은 프로그램을 최종 종료
 ```abap
-" 300번 화면 내부에서 실행 시 동작 비교
+" Screen 300
 LEAVE TO SCREEN 0.
-SET SCREEN 0. LEAVE SCREEN.
 ```
 </br>
 </br>
 
 ### 3) LEAVE SCREEN
 - 현재 화면을 종료
-- CALL SCREEN으로 열린 화면에서는 이전 화면으로 복귀
-- SET SCREEN 후 사용 시 지정된 화면으로 이동
+- 어디로 갈지는 주변 흐름에 따라 결정
 ```abap
 LEAVE SCREEN.
 ```
 - **예시 1 : CALL SCREEN 안에서**
-- 호출 전의 이전 화면으로 복귀
+- Screen 300의 Next Dynpro = 0 => 100으로 이동
+- Screen 300의 Next Dynpro = 400 => 400으로 이동
+- 100으로 이동
 ```abap
+" Screen 100
+CALL SCREEN 300.
+
+" Screen 300
 LEAVE SCREEN.
 ```
 - **예시 2 : SET SCREEN과 함께**
@@ -365,7 +378,8 @@ LEAVE SCREEN.
 ```abap
 LEAVE TO SCREEN 300.
 ```
-- 현재 화면을 종료하고 호출한 이전 화면으로 복귀하거나 프로그램을 종료하는 명령어
+- CALL SCREEN으로 열린 화면 → 호출한 화면 흐름의 Next Screen으로 이동
+- 없으면 → 가장 최근 CALL SCREEN 호출자 흐름으로 복귀
 ```abap
 LEAVE TO SCREEN 0.
 ```
