Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -684,3 +684,105 @@ MODULE status_0100 OUTPUT.
   ENDIF.
 ENDMODULE.
 ```
+</br>
+</br>
+</br>
+
+### 실습 3 ( call screen / leave to screen 0 활용 )
+</br>
+
+**1) 스크린 추가**
+- 100의 next dynpro는 200, 200은 300, 300은 400, 400은 400으로 설정
+
+<img width="327" height="450" alt="image" src="https://github.com/user-attachments/assets/e0cdd50a-fb43-4cae-831d-190339d60389" />
+</br>
+</br>
+
+**2) 모듈 `PAI` 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03003_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  CASE OK_CODE.
+    WHEN 'MOVE'.
+     " Next 스크린 200번으로 설정되어 있지만,
+     " Next 스크린 300번으로 세팅값 변경(복귀X)
+*      SET SCREEN 300.
+*      LEAVE SCREEN.
+*      => LEAVE TO SCREEN 300. 과 동일함
+
+      " 현재 시점에서 300번 스크린 호출(추후 복귀)
+      CALL SCREEN 300.
+
+    WHEN 'BACK' OR 'EXIT' OR 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0200  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0200 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK' OR 'EXIT' OR 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0300  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0300 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK' OR 'EXIT' OR 'CANCEL'.
+       LEAVE SCREEN.
+*      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0400  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0400 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK' OR 'EXIT' OR 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**3) 결과 확인**
+- `100` 에서 버튼 클릭시 `300` 으로 이동
+- `300` 에서 뒤로가기 하면 `LEAVE SCREEN` 때문에 Next Dynpro인 `400` 으로 이동
+- `400` 에서 뒤로가기 하면 `LEAVE TO SCREEN 0` 때문에 가장 최근 CALL SCREEN 호출자인 100의 Next Dynpro인 `200` 으로 이동
+- `200` 에서 뒤로가기 하면 프로그램 종료
+
+<img width="452" height="300" alt="image" src="https://github.com/user-attachments/assets/6bc01e2d-153a-4162-abd6-8923ac13dbe0" />
+</br>
+</br>
+
+<img width="418" height="291" alt="image" src="https://github.com/user-attachments/assets/4ad9cd89-eed0-44ff-9c27-5ffdde0192b3" />
+</br>
+</br>
+
+<img width="402" height="276" alt="image" src="https://github.com/user-attachments/assets/c0f5a47d-9d69-4e7a-989e-945df5968f1e" />
+</br>
+</br>
+
+<img width="379" height="295" alt="image" src="https://github.com/user-attachments/assets/8b15948a-75be-4658-80ab-e8e09d8233f2" />
