Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -25,6 +25,8 @@
     
 - SCREEN 테이블은 헤더라인 있는 INTERNAL TABLE
   - ABAP 모듈풀에서 스크린 필드 속성을 변경할 때 사용하는 시스템 내부 테이블
+
+- **스크린 속성 변경은 PBO 한 번 지나가면 다시 초기화**
 </br>
 </br>
 
