Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -613,7 +613,7 @@ MODULE user_command_0100 INPUT.
              ZSCARRFLIGHT_B03-SEATSOCC.
       gv_button2 = 1.
     WHEN 'FCBTN03'.   " 검색 눌렀을 때
-      CLEAR: gs_data.
+*      CLEAR: gs_data.
       IF gv_button1 = 1.
         SELECT SINGLE CARRNAME CURRCODE FROM scarr
           INTO CORRESPONDING FIELDS OF gs_data
@@ -636,9 +636,14 @@ MODULE user_command_0100 INPUT.
             AND B~fldate = ZSCARRFLIGHT_B03-FLDATE.
         gv_result_btn3 = 1.
       ENDIF.
+
+      gs_data-carrid = ZSCARRFLIGHT_B03-CARRID.
+      gs_data-connid = ZSCARRFLIGHT_B03-CONNID.
+      gs_data-fldate = ZSCARRFLIGHT_B03-FLDATE.
     WHEN OTHERS.
   ENDCASE.
 
+  CLEAR: OK_CODE.
 ENDMODULE.
 ```
 </br>
@@ -654,6 +659,24 @@ ENDMODULE.
 *&
 *&---------------------------------------------------------------------*
 MODULE status_0100 OUTPUT.
+  IF gv_button1 = 1.
+    LOOP AT SCREEN.
+      IF SCREEN-GROUP2 = 'FLT'.
+        SCREEN-invisible = 1.
+        SCREEN-input = 0.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+  ELSEIF gv_button2 = 1.
+    LOOP AT SCREEN.
+      IF SCREEN-GROUP1 = 'CAR'.
+        SCREEN-invisible = 1.
+        SCREEN-input = 0.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+  ENDIF.
+
   IF gv_result_btn1 = 1.    " SCARR -> 검색 눌렀을 때
     LOOP AT SCREEN.
       IF SCREEN-GROUP2 = 'FLT'.
