Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -151,12 +151,12 @@ SET SCREEN 300.
 LEAVE SCREEN.
 ```
 - **예시 2 : SET SCREEN + LEAVE TO SCREEN 0**
-- 상황 1 : 현재 화면의 Next Screen = 200 (Initial Screen이 아님 + 상위 Dynpro 존재)
+- 상황 1 : 상위 Dynpro 흐름의 Next Screen = 200 (Initial Screen이 아님 + 상위 Dynpro 존재)
 ```abap
 SET SCREEN 300.
 LEAVE TO SCREEN 0.  " 200으로 이동
 ```
-- 상황 2 : 현재 화면의 Next Screen = 0 (Initial Screen)
+- 상황 2 : 상위 Dynpro 흐름의 Next Screen = 0 (Initial Screen)
 ```abap
 SET SCREEN 300.
 LEAVE TO SCREEN 0.  " 프로그램 종료
