Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -185,6 +185,7 @@ LEAVE SCREEN.
 ```
 - **예시 2 : CALL SCREEN + LEAVE TO SCREEN 0**
 - `SCREEN 0` → 상위 Dynpro 흐름의 Next Screen
+- CALL SCREEN 구문 바로 아래 구문으로 이동 (CALL 코드 아래 코드가 있으면 거기부터 실행)
 - 200으로 이동
 ```abap
 " Screen 100 (Next Screen = 200)
